# colna-memo

./: .gitignore  Cargo.toml  README.md  colna
memory/: CONVENTIONS.md
memory/10-Projects/: GraceChat-Earn-Android.md  colna-memo.md  pwa-chat-input-bar.md  sitin-demo-webapp.md  sitin-next.md  social-proxy-scripts-container-app.md  super-image2.md
memory/10-Projects/shangtang-sdk-demo/: README.md  implementation-guide-pwa.html  implementation-guide-pwa.md  tech-proposal-pwa-integration.md
memory/30-Resources/: dms-query-manual.md  feishu-release-request-format.md  grafana-loki-query-manual.md  instagram-script-selector-conventions.md  mcp-servers.md  pwa-female-wallet-billing.md  sitin-v3-signal-types.md
memory/30-Resources/troubleshooting/: colna-sync.md  lark-cli-auth-and-perms.md  rust-tips.md  sitin-next-ci-turbo-cache.md  sitin-next-push-prepush.md  sitin-next-script-error.md  sitin-online-stats-redis-online.md
memory/50-Daily/: 2026-06-25.md  2026-06-26.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md
memory/_attachments/: shangtang-beauty-implementation-guide.html  shangtang-beauty-pwa-tech-proposal.html
memory/_templates/: daily.md  note.md  work-log.md
memory/notes/: welcome.md
src/: chunker.rs  embedder.rs  gitsync.rs  main.rs  mcp.rs  state.rs  store.rs
