[package]
name = "colna-memo"
version = "0.1.0"
edition = "2021"
description = "跨设备个人知识库:Git 存 Markdown 真源,本地用 zvec 建语义索引"
license = "Apache-2.0"

[[bin]]
name = "colna"
path = "src/main.rs"

[dependencies]
# crates.io 上的 zvec 仅 0.1.0 且 API 与官方仓库不一致,直接锁定官方仓库 v0.5.0
zvec = { git = "https://github.com/zvec-ai/zvec-rust", tag = "v0.5.0" }
fastembed = "4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[profile.release]
opt-level = 3
